2010-05-04  Tucker Jay  <jay.tucker@nokia.com>

Reviewed by Holger Freyther.

        Animated GIF images does not animate 10x as expected by default.
        https://bugs.webkit.org/show_bug.cgi?id=36818

        Added test case to existing manual test to test the
        fixed functionality.

        * manual-tests/qt/qt-10loop-anim.gif: Added.
        * manual-tests/qt/qt-gif-test.html:
        * platform/graphics/qt/ImageDecoderQt.cpp:
        (WebCore::ImageDecoderQt::repetitionCount):

Canonical link: https://commits.webkit.org/49999@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58744 268f45cc-cd09-0410-ab3c-d52691b4dbfc